--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ flask-wtf = "*"
 flask-sqlalchemy = "*"
 psycopg2 = "*"
 psycopg2-binary = "*"
+flask-migrate = "*"
+flask-script = "*"
 
 [requires]
 python_version = "3.7"
