--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ psycopg2 = "*"
 psycopg2-binary = "*"
 flask-migrate = "*"
 flask-script = "*"
+gunicorn = "*"
 
 [requires]
 python_version = "3.7"
